--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: java
 jdk:
   - openjdk17
+
+before_install:
+  - echo "$Malu2000*" | docker login -u "$josphen" --password-stdin
+  - docker pull openjdk:11-jre-slim-sid
+
 script:
   - ./mvnw clean install
+  - ./mvnw deploy jib:build -P deploy-docker
